@@ -1,26 +1,29 @@
 package com.databricks.jdbc.core;
 
-import com.databricks.client.jdbc42.internal.apache.arrow.memory.BufferAllocator;
-import com.databricks.client.jdbc42.internal.apache.arrow.memory.RootAllocator;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.*;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.dictionary.DictionaryProvider;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.ipc.ArrowStreamReader;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.ipc.ArrowStreamWriter;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.ipc.ArrowWriter;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.types.Types;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.types.pojo.Field;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.types.pojo.FieldType;
-import com.databricks.client.jdbc42.internal.apache.arrow.vector.types.pojo.Schema;
 import com.databricks.sdk.service.sql.ChunkInfo;
-import org.checkerframework.checker.units.qual.A;
+import org.apache.arrow.memory.RootAllocator;
+import org.apache.arrow.vector.FieldVector;
+import org.apache.arrow.vector.Float8Vector;
+import org.apache.arrow.vector.IntVector;
+import org.apache.arrow.vector.VectorSchemaRoot;
+import org.apache.arrow.vector.dictionary.DictionaryProvider;
+import org.apache.arrow.vector.ipc.ArrowStreamWriter;
+import org.apache.arrow.vector.ipc.ArrowWriter;
+import org.apache.arrow.vector.types.Types;
+import org.apache.arrow.vector.types.pojo.Field;
+import org.apache.arrow.vector.types.pojo.FieldType;
+import org.apache.arrow.vector.types.pojo.Schema;
 import org.junit.jupiter.api.Test;
 
-import java.io.*;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 
-import static java.lang.Math.*;
+import static java.lang.Math.min;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class ArrowResultChunkTest {
@@ -30,6 +33,10 @@ public class ArrowResultChunkTest {
 
     private long totalRows = 110;
 
+    /*
+    If running into Arrow memory buffer error, run with jvm argument --add-opens java.base/java.nio=ALL-UNNAMED
+    i.e. mvn test -DargLine="--add-opens java.base/java.nio=ALL-UNNAMED"
+     */
     @Test
     public void testGetArrowDataFromInputStream() throws Exception {
         // Arrange
